[package]
name = "connectteam_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
json = "*"
chrono = "*"
term-table = "*"
fstrings = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
home = "*"
anyhow = {version = "*", features = ["backtrace"]} 
chrono-english = "*"
clap = {version = "*", features = ["derive"]}